@@ -940,11 +940,7 @@ if [ $# -eq 1 ]; then
     -help|-h)
         print_usage ""
         exit
-    ;;
-    -version|-v|version)
-        run_tool version
-        exit
-    ;;
+    ;;    
   esac
 fi
 
